# lv_sim_visual_studio_sdl

./: .gitignore
visual_studio_2017_sdl/: CMakeLists.txt  lv_drv_conf.h  main.cpp  visual_studio_2017_sdl.vcxproj
